fixed text align on footer and nav bar to be spaced evenly

--- a/assets/style.css
+++ b/assets/style.css
@@ -27,6 +27,7 @@ body {
   li {
     display: inline;
     color: white;
+    padding: 25px;
   }
 a {
   color: white;
